@@ -139,6 +139,26 @@ and won't work with versions of jsch earlier than
       Defaults to 0 which means &quot;wait forever&quot;.</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">input</td>
+    <td valign="top">A file from which the executed command's standard
+      input is taken. This attribute is mutually exclusive with the
+      inputstring attribute.<br/>
+      When executing more than one command via commandRessource, input
+      will be read for each command.
+      <em>since Ant 1.8.0</em></td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">inputstring</td>
+    <td valign="top">A string which serves as the input stream for the
+      executed command. This attribute is mutually exclusive with the
+      input attribute.<br/>
+      When executing more than one command via commandRessource, input
+      will be read for each command.
+      <em>since Ant 1.8.0</em></td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 
 <h3>Examples</h3>
